--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dependencies",
     "deprecated"
   ],
+  "main": "dist/cli.mjs",
+  "module": "dist/cli.mjs",
   "bin": {
     "ndc": "bin/ndc.mjs"
   },
@@ -35,10 +37,12 @@
     "@antfu/eslint-config": "^0.27.0",
     "@antfu/ni": "^0.18.0",
     "@antfu/utils": "^0.5.2",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.7.18",
     "@types/semver": "^7.3.13",
     "@types/validate-npm-package-name": "^4.0.0",
     "@types/yargs": "^17.0.13",
+    "@types/yarnpkg__lockfile": "^1.1.5",
     "bumpp": "^8.2.1",
     "eslint": "^8.23.1",
     "esno": "^0.16.3",
@@ -46,8 +50,13 @@
     "unbuild": "^0.8.11"
   },
   "dependencies": {
+    "@pnpm/lockfile-file": "^6.0.2",
+    "@pnpm/logger": "^5.0.0",
+    "@yarnpkg/lockfile": "^1.1.0",
     "chalk": "^5.1.2",
+    "dependency-path": "^9.2.8",
     "execa": "^6.1.0",
+    "fs-extra": "^10.1.0",
     "got": "^12.5.3",
     "ora": "^6.1.2",
     "semver": "^7.3.8",
