--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@pnpm/logger": "^5.0.0",
     "@yarnpkg/lockfile": "^1.1.0",
     "chalk": "^5.1.2",
+    "commander": "^11.0.0",
     "fs-extra": "^10.1.0",
     "node-fetch": "^3.3.1",
     "ora": "^6.1.2",
