--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "commander": "^7.2.0",
     "fs-extra": "^9.1.0",
     "node-fetch": "^2.7.0",
+    "node-releases": "^2.0.18",
     "ora": "^5.4.1",
     "semver": "^7.6.3"
   },
