--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "@pnpm/lockfile-file": "^7.0.6",
-    "@pnpm/logger": "^5.1.0",
+    "@pnpm/logger": "5.1.0",
     "@yarnpkg/lockfile": "^1.1.0",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
