--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@pnpm/lockfile-file": "^7.0.6",
     "@pnpm/logger": "5.1.0",
     "@yarnpkg/lockfile": "^1.1.0",
-    "chalk": "^5.3.0",
+    "ansis": "^3.3.2",
     "commander": "^11.1.0",
     "fs-extra": "^11.2.0",
     "node-fetch": "^3.3.2",
