--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "dependencies": {
     "@pnpm/lockfile-file": "^9.1.3",
     "@pnpm/logger": "1001.0.0",
-    "@yarnpkg/lockfile": "^1.1.0",
+    "@yarnpkg/parsers": "^3.0.3",
     "ansis": "^4.0.0",
     "commander": "^13.1.0",
     "fs-extra": "^11.3.0",
