--- a/.github/workflows/automated-tests.yaml
+++ b/.github/workflows/automated-tests.yaml
@@ -23,19 +23,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: latest
+          run_install: false
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           cache-dependency-path: pnpm-lock.yaml
           node-version: ${{ matrix.node-version }}
           check-latest: true
-          cache: npm
+          cache: pnpm
 
       - name: Install dependencies
-        run: npx pnpm install
+        run: pnpm install
 
       - name: Build project
-        run: npx pnpm run build
+        run: pnpm run build
 
       - name: Save build artifacts
         uses: actions/upload-artifact@v4
@@ -68,13 +74,24 @@ jobs:
           path: dist
 
       - name: Install pnpm
-        run: npm install -g pnpm yarn
+        uses: pnpm/action-setup@v2
+        with:
+          version: latest
+          run_install: false
 
-      - name: Pnpm version
-        run: pnpm --version
+      - name: Check versions
+        run: |
+          yarn --version
+          pnpm --version
 
-      - name: Yarn version
-        run: yarn --version
+      - name: Check global dependencies
+        run: |
+          npm ls -g --depth=0 --json
+          yarn global list --depth=0
+          pnpm list -g --depth=0 --json
+
+      - name: Install production dependencies
+        run: pnpm install --prod
 
       - name: Run tests
         run: pnpm test
