--- a/.github/workflows/automated-tests.yaml
+++ b/.github/workflows/automated-tests.yaml
@@ -49,7 +49,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        node-version: [22, 20, 18, 16]
+        node-version: [22, 20, 18]
 
     steps:
       - name: Checkout code
@@ -68,18 +68,13 @@ jobs:
           path: dist
 
       - name: Install pnpm
-        run: |
-          if [[ ${{ matrix.node-version }} == 16 ]]; then
-            npm install -g pnpm@8
-          else
-            npm install -g pnpm
-          fi
+        run: npm install -g pnpm yarn
 
       - name: Pnpm version
         run: pnpm --version
 
-      - name: Install dependencies
-        run: pnpm install --prod
+      - name: Yarn version
+        run: yarn --version
 
       - name: Run tests
         run: pnpm test
