--- a/.github/workflows/automated-tests.yaml
+++ b/.github/workflows/automated-tests.yaml
@@ -93,10 +93,11 @@ jobs:
       - name: Install production dependencies
         run: pnpm install --prod
 
-      - name: Run tests
-        if: matrix.node-version < 22
+      # node --run requires Node.js >= 22
+      - name: Run tests (Node < 22)
+        if: ${{ matrix.node-version < 22 }}
         run: npm run test
 
-      - name: Run tests
-        if: matrix.node-version >= 22
+      - name: Run tests (Node >= 22)
+        if: ${{ matrix.node-version >= 22 }}
         run: node --run test
