--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dist"
   ],
   "engines": {
-    "node": ">=18"
+    "node": ">=18.12"
   },
   "preferGlobal": true,
   "scripts": {
@@ -45,24 +45,24 @@
   },
   "dependencies": {
     "@pnpm/lockfile-file": "^9.1.3",
-    "@pnpm/logger": "1001.0.0",
+    "@pnpm/logger": "^5.2.0",
     "@yarnpkg/parsers": "^3.0.3",
-    "ansis": "^4.1.0",
-    "commander": "^14.0.0",
-    "semver": "^7.7.2",
+    "ansis": "^4.2.0",
+    "commander": "^14.0.2",
+    "semver": "^7.7.3",
     "yocto-spinner": "^1.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.17.0",
-    "@types/node": "^24.0.15",
-    "@types/semver": "^7.7.0",
+    "@antfu/eslint-config": "^7.2.0",
+    "@types/node": "^25.0.10",
+    "@types/semver": "^7.7.1",
     "@types/yarnpkg__lockfile": "^1.1.9",
-    "eslint": "^9.31.0",
-    "lint-staged": "^16.1.2",
-    "simple-git-hooks": "^2.13.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "unbuild": "^3.5.0"
+    "eslint": "^9.39.2",
+    "lint-staged": "^16.2.7",
+    "simple-git-hooks": "^2.13.1",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "unbuild": "^3.6.1"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
